--- a/src/content/docs/intro/versioning.mdx
+++ b/src/content/docs/intro/versioning.mdx
@@ -4,4 +4,4 @@ description: Versioning of the Node Social API
 slug: versioning
 ---
 
-This gudie follows [Semantic Versioning](https://semver.org/) (SemVer) to ensure that developers can easily understand the changes made to the API and how they may affect their applications. The versioning scheme consists of three numbers: `MAJOR.MINOR.PATCH`. A new codename (such as "Vega" for v1.0) is assigned to each `.MINOR` release to provide a more memorable reference for developers.
+This guide follows [Semantic Versioning](https://semver.org/) (SemVer) to ensure that developers can easily understand the changes made to the API and how they may affect their applications. The versioning scheme consists of three numbers: `MAJOR.MINOR.PATCH`. A new codename (such as "Vega" for v1.0) is assigned to each `.MINOR` release to provide a more memorable reference for developers.
